--- a/src/shared/ui/variables.module.scss
+++ b/src/shared/ui/variables.module.scss
@@ -1,7 +1,11 @@
 $breakpoint-mobile: 480px;
 $breakpoint-tablet: 768px;
 $breakpoint-desktop: 1024px;
-$breakpoint-large-desktop: 1200px;
+$breakpoint-large-desktop: 1600px;
 
+
+$color-background: #163146;
+$color-loader: #0B89EAFF;
 $color-font: #E0E9F2;
 $color-error: #c0392b;
+$color-ship-header: #EDC37B;
