Add Checkbox and Button components

--- a/src/shared/ui/variables.module.scss
+++ b/src/shared/ui/variables.module.scss
@@ -6,6 +6,10 @@ $breakpoint-large-desktop: 1600px;
 
 $color-background: #163146;
 $color-loader: #0B89EAFF;
+$color-additional: #1CBDD9;
 $color-font: #E0E9F2;
 $color-error: #c0392b;
 $color-ship-header: #EDC37B;
+
+$color-button: #0A3144;
+$color-button-reset: #1E252C
