--- a/src/shared/ui/loader/loader.module.scss
+++ b/src/shared/ui/loader/loader.module.scss
@@ -13,7 +13,7 @@
     position: absolute;
     inset: 0;
     border: 3px solid rgba(0, 0, 0, 0.12); /* subtle track */
-    border-top-color: vars.$color-loader; /* visible spinner color */
+    border-top-color: vars.$color-additional; /* visible spinner color */
     border-radius: 50%;
     transform-origin: 50% 50%;
     animation: loader-spin 0.8s linear infinite;
