--- a/src/features/vehicleFilter/vehicleFilter.module.scss
+++ b/src/features/vehicleFilter/vehicleFilter.module.scss
@@ -1,13 +1,21 @@
+@use '../../shared/ui/variables.module.scss' as vars;
+
+.filter-container {
+  background: rgba(0, 0, 0, 0.4);
+}
 .filter {
   padding: 10px 20px;
-  background: rgba(0, 0, 0, 0.4);
   display: flex;
   flex-direction: row;
   column-gap: 40px;
+  border-bottom: 1px solid rgba(224, 233, 242, 0.5);
+}
+
+.button-container {
+  padding: 10px 20px;
 }
 
 .filter-group {
-
 }
 
 .filter-group-title {
