--- a/src/shared/ui/button/button.module.scss
+++ b/src/shared/ui/button/button.module.scss
@@ -20,5 +20,15 @@
     opacity: 0.55;
     cursor: not-allowed;
   }
+
+  &.icon {
+    border: none;
+    padding: 5px;
+    background: none;
+  }
+
+  &.tiny {
+    padding: 5px;
+  }
 }
 
