--- a/src/shared/ui/variables.module.scss
+++ b/src/shared/ui/variables.module.scss
@@ -12,4 +12,6 @@ $color-error: #c0392b;
 $color-ship-header: #EDC37B;
 
 $color-button: #0A3144;
-$color-button-reset: #1E252C
+$color-button-reset: #1E252C;
+
+$color-border-light: rgba(224, 233, 242, 0.3);
