--- a/src/pages/pageVehicles/pageVehicles.module.scss
+++ b/src/pages/pageVehicles/pageVehicles.module.scss
@@ -33,3 +33,8 @@
   margin-right: 5px;
   border-right: 1px solid vars.$color-border-light;
 }
+
+.search {
+  align-self: center;
+  margin-left: auto;
+}
