--- a/src/pages/pageVehicles/ui/vehicleFilter/vehicleFilter.module.scss
+++ b/src/pages/pageVehicles/ui/vehicleFilter/vehicleFilter.module.scss
@@ -1,4 +1,4 @@
-@use '../../shared/ui/variables.module.scss' as vars;
+@use '../../../../shared/ui/variables.module' as vars;
 
 .filter-container {
   background: rgba(0, 0, 0, 0.8);
